--- a/Tries/pom.xml
+++ b/Tries/pom.xml
@@ -21,6 +21,19 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://dzone.com/articles/generate-test-data-datafactory -->
+		<dependency>
+			<groupId>org.fluttercode.datafactory</groupId>
+			<artifactId>datafactory</artifactId>
+			<version>0.8</version>
+			<type>jar</type>
+		</dependency>
+		<!-- FastUtils dependencies -->
+		<dependency>
+			<groupId>it.unimi.dsi</groupId>
+			<artifactId>fastutil</artifactId>
+			<version>7.1.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
